--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -139,7 +139,7 @@
 
 @article{vbc1872cr,
 	author={van Bambeke, Charles Eugène Marie},
-	title={Premiers effets de la fécondation sur les œufs de poissons: sur l'origine et la signification du feuillets muqueux ou glandulaire chez les poissons osseux.},
+	title={Premiers effets de la fécondation sur les \oe{}ufs de poissons: sur l'origine et la signification du feuillets muqueux ou glandulaire chez les poissons osseux.},
 	year={1872},
 	volume={74},
 	pages={1056ff},
@@ -228,7 +228,7 @@
 
 @phdthesis{vbe1870bru,
 	author={van Beneden, Édouard},
-	title={Recherches sur la composition et la signification de l'œuf / basées sur l'étude de son mode de formation et des premiers phénomènes embryonnaires (mammifères, oiseaux, crustacés, vers)},
+	title={Recherches sur la composition et la signification de l'\oe{}uf / basées sur l'étude de son mode de formation et des premiers phénomènes embryonnaires (mammifères, oiseaux, crustacés, vers)},
 	year={1868},
 	publisher={Acad. royale de Belgique},
 	address={Bruxelles},
@@ -257,7 +257,7 @@
 
 @article{vbe1875bel,
 	author={van Beneden, Édouard},
-	title={La maturation de l'œuf, la fécondation et les premières phases du développement embryonnaire des mammifères d'après des recherches faites chez le Lapin.},
+	title={La maturation de l'\oe{}uf, la fécondation et les premières phases du développement embryonnaire des mammifères d'après des recherches faites chez le Lapin.},
 	journal={Bull. Acad. royale de Belgique Ser. II},
 	year={1875},
 	volume={40},
@@ -810,7 +810,7 @@
 
 @article{fz1885ama2,
     author={Frenzel, J.},
-    title={Einiges über den Mitteldarm der Insecten, sowie über Epithelregeneration.},
+    title={Einiges über den Mitteldarm der Insecten, sowie über Epithelregeneration.},
     year={1885},
     journal={Archiv f. mikrosk. Anatomie},
     volume={26},
@@ -832,7 +832,7 @@
 
 @article{fm1884jen,
     author={Frommann, C.},
-    title={Untersuchungen über Structur, Lebenserscheinungen und Reactionen thierischer und pflanzlicher Zellen.},
+    title={Untersuchungen über Structur, Lebenserscheinungen und Reactionen thierischer und pflanzlicher Zellen.},
     year={1884},
     journal={Jenaische Z. f. Naturwiss.},
     volume={17},
@@ -842,7 +842,7 @@
 
 @article{fu1887sw,
     author={Fütterer},
-    title={Ueber karyokinetische Vorgänge in einem Riesenzellensarkom (Epulis).},
+    title={Ueber karyokinetische Vorgänge in einem Riesenzellensarkom (Epulis).},
     year={1887},
     journal={Sitzungsber. phys.-med. Ges. Würzburg},
     pages={63}
@@ -850,7 +850,7 @@
 
 @book{gg1854,
     author={Gegenbaur, C.},
-    title={Beiträge zur näheren Kenntniss der Schwimmpolypen (Siphonophoren)},
+    title={Beiträge zur näheren Kenntniss der Schwimmpolypen (Siphonophoren)},
     year={1854},
     publisher={W. Engelmann},
     url={http://openlibrary.org/works/OL13131343W}
@@ -982,7 +982,7 @@
 
 @article{gr1883zwz,
     author={Gruber, A.},
-    title={Untersuchungen über einige Protozoen.},
+    title={Untersuchungen über einige Protozoen.},
     year={1883},
     journal={Z. wiss. Zool.},
     volume={38},
@@ -1000,7 +1000,7 @@
 
 @article{gr1885zwz,
     author={Gruber, A.},
-    title={Studien über Amöben.},
+    title={Studien über Amöben.},
     year={1885},
     journal={Z. wiss. Zool.},
     volume={41},
@@ -1009,7 +1009,7 @@
 
 @article{gr1885bzb,
     author={Gruber, A.},
-    title={Ueber künstliche Theilung bei Infusorien.},
+    title={Ueber künstliche Theilung bei Infusorien.},
     year={1885},
     journal={Biol. Centralbl.},
     volume={4},
@@ -1020,7 +1020,7 @@
 
 @article{gr1886bzb,
     author={Gruber, A.},
-    title={Ueber künstliche Theilung bei Infusorien. 2. Mittheilung},
+    title={Ueber künstliche Theilung bei Infusorien. 2. Mittheilung},
     year={1886},
     journal={Biol. Centralbl.},
     volume={5},
@@ -1058,15 +1058,16 @@
 
 @phdthesis{hh1872diss,
     author={Heidenhain, B.},
-    title={Ueber die Verfettung fremder Körper in der
-Bauchhöhle},
+    title={Ueber die Verfettung fremder Körper in der
+Bauchhöhle},
     year={1872},
     address={Breslau},
+    note={(Diss.)}
     }
 
 @article{he1876zae,
     author={Hensen, V.},
-    title={Beobachtungen über die Befruchtung und Entwicklung des Kaninchens und Meerschweinchens.},
+    title={Beobachtungen über die Befruchtung und Entwicklung des Kaninchens und Meerschweinchens.},
     year={1876},
     journal={Z. Anat. Entw.-Gesch.},
     volume={1},
@@ -1086,7 +1087,7 @@ Bauchhöhle},
 
 @article{he1885lj,
     author={Hensen, V.},
-    title={Die Grundlagen der Vererbung nach dem gegenwärtigen Wissenskreis.},
+    title={Die Grundlagen der Vererbung nach dem gegenwärtigen Wissenskreis.},
     year={1885},
     journal={Landwirtsch. Jahrb.},
     editor={Thiel, H.},
@@ -1115,7 +1116,7 @@ Bauchhöhle},
 
 @article{hwo1875mj,
     author={Hertwig, O.},
-    title={Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies.},
+    title={Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies.},
     year={1876},
     journal={Morphol. Jahrb.},
     volume={1},
@@ -1125,7 +1126,7 @@ Bauchhöhle},
 
 @article{hwo1876mj,
     author={Hertwig, O.},
-    title={Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies. Zweiter Theil.},
+    title={Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies. Zweiter Theil.},
     year={1876},
     journal={Morphol. Jahrb.},
     volume={3},
@@ -1135,7 +1136,7 @@ Bauchhöhle},
 
 @article{hwo1877mj,
     author={Hertwig, O.},
-    title={Weitere Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies.},
+    title={Weitere Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies.},
     year={1877},
     journal={Morphol. Jahrb.},
     volume={3},
@@ -1174,7 +1175,7 @@ Bauchhöhle},
 
 @article{hs1884bz,
     author={Heuser, E.},
-    title={Beobachtungen über Zellkerntheilung.},
+    title={Beobachtungen über Zellkerntheilung.},
     year={1884},
     journal={Botan. Centralbl.},
     volume={17},
@@ -1186,7 +1187,7 @@ Bauchhöhle},
 
 @book{his1873,
     author={His, W.},
-    title={Untersuchungen über das Ei und die Eientwicklung bei Knochenfischen},
+    title={Untersuchungen über das Ei und die Eientwicklung bei Knochenfischen},
     year={1873},
     publisher={F.C.W. Vogel},
     address={Leipzig},
@@ -1224,7 +1225,7 @@ Bauchhöhle},
 
 @article{kn1870cbm,
     author={Klein, E.},
-    title={Ueber Theilung farbloser Blutkörperchen.},
+    title={Ueber Theilung farbloser Blutkörperchen.},
     year={1870},
     journal={Centralblatt f. d. med. Wissenschaften},
     volume={2},
@@ -1287,7 +1288,7 @@ Bauchhöhle},
 
 @article{kl1886zwz,
     author={Kölliker, A.},
-    title={Die Bedeutung der Zellkerne für die Vorgänge der Vererbung.},
+    title={Die Bedeutung der Zellkerne für die Vorgänge der Vererbung.},
     year={1886},
     journal={Z. wiss. Zool.},
     volume={42}
@@ -1295,7 +1296,7 @@ Bauchhöhle},
 
 @article{ko1883ama,
     author={Koganeï, J.},
-    title={Untersuchungen über die Histiogenese der Retina.},
+    title={Untersuchungen über die Histiogenese der Retina.},
     year={1883},
     journal={Arch. f. mikr. Anat.},
     volume={23},
@@ -1332,7 +1333,7 @@ Bauchhöhle},
 
 @article{ks1885bcg,
     author={Kossel, A.},
-    title={Ueber eine neue Base aus dem Thierkörper.},
+    title={Ueber eine neue Base aus dem Thierkörper.},
     year={1885},
     journal={Ber. dt. chem. Ges.},
     volume={18},
@@ -1342,8 +1343,8 @@ Bauchhöhle},
     }
 
 @book{kw1871,
-    author={Kovalevskiĭ, A.O.},
-    title={Embryologische Studien an Würmern und
+    author={Kovalevsky, A.O.},
+    title={Embryologische Studien an Würmern und
 Arthropoden.},
     year={1871},
     series={Mém. Acad. Sci. St. Petersbourg. 7ème serie},
@@ -1355,7 +1356,7 @@ Arthropoden.},
 
 @article{ku1887ama,
     author={Kultschitzky, N.},
-    title={Die Befruchtungsvorgänge bei Ascaris megalocephala.},
+    title={Die Befruchtungsvorgänge bei Ascaris megalocephala.},
     year={1888},
     journal={Arch. mikr. Anat.},
     volume={31},
@@ -1366,7 +1367,7 @@ Arthropoden.},
 
 @article{ku1888sbp,
     author={Kultschitzky, N.},
-    title={Ergebnisse einer Untersuchung über Befruchtungs-Vorgänge bei Ascaris megalocephala.},
+    title={Ergebnisse einer Untersuchung über Befruchtungs-Vorgänge bei Ascaris megalocephala.},
     year={1888},
     journal={Sitzungsb. K. Preuss. Acad. Wiss.},
     number={1},
@@ -1386,7 +1387,7 @@ Arthropoden.},
 
 @article{kf1878bcm,
     author={Kupffer, C.},
-    title={Laichen und Entwicklung des Ostseehärings.},
+    title={Laichen und Entwicklung des Ostseehärings.},
     year={1878},
     journal={Jahresbericht der Commission zur wissenschaftl. Untersuchung der deutschen Meere},
     url={http://www.biodiversitylibrary.org/bibliography/44913}
@@ -1396,7 +1397,7 @@ Arthropoden.},
     author={Kupffer, C.},
     title={Die Betheiligung des Dotters am Befruchtungsacte.},
     year={1882},
-    journal={Sitzgsb. der math.-phys. Klasse d. Königl. Bayr. Akad. d. Wissensch. zu München},
+    journal={Sitzgsb. der math.-phys. Klasse d. Königl. Bayr. Akad. d. Wissensch. zu München},
     volume={6}
     }
 
@@ -1412,7 +1413,7 @@ Arthropoden.},
 
 @article{lv1886ama,
     author={La Valette-St. George, A.},
-    title={Spermatologische Beiträge II.},
+    title={Spermatologische Beiträge II.},
     year={1886},
     journal={Arch. mikrosk. Anat.},
     volume={27},
@@ -1420,7 +1421,7 @@ Arthropoden.},
     url={http://www.biodiversitylibrary.org/page/13992607}
     }
 
-@inbook{lv1887,
+@incollection{lv1887,
     author={La Valette-St. George, A.},
     title={Zelltheilung und Samenbildung bei Forficula auricularia},
     booktitle={Festschrift, Albert von Kölliker zur Feier seines siebenzigsten Geburtstages, gewidmet von seinen Schülern},
@@ -1431,7 +1432,7 @@ Arthropoden.},
 
 @article{la1884va,
     author={Lavdowsky, M.},
-    title={Mikroskopische Untersuchungen einiger Lebensvorgänge des Blutes.},
+    title={Mikroskopische Untersuchungen einiger Lebensvorgänge des Blutes.},
     year={1884},
     journal={Arch. path. Anat.},
     volume={96},
@@ -1452,7 +1453,7 @@ Arthropoden.},
 
 @article{le1855zwz,
     author={Leydig, Fr.},
-    title={,Ueber den Bau und die systematische Stellung der Räderthiere.},
+    title={Ueber den Bau und die systematische Stellung der Räderthiere.},
     year={1855},
     journal={Zeitschr. wiss. Zool.},
     volume={6},
@@ -1472,7 +1473,7 @@ Arthropoden.},
 
 @article{lo1885sbw,
     author={Löwit, M.},
-    title={Ueber Neubildung und Zerfall weisser Blutkörperchen.},
+    title={Ueber Neubildung und Zerfall weisser Blutkörperchen.},
     year={1885},
     journal={Sitzber. math.-naturw. Cl. kais. Akad. Wiss. Wien},
     volume={92},
@@ -1488,7 +1489,7 @@ Arthropoden.},
 
 @article{lu1887aap,
     author={Lukjanow, S. M.},
-    title={Beiträge zur Morphologie der Zelle.},
+    title={Beiträge zur Morphologie der Zelle.},
     year={1887},
     journal={Arch. Anatom. Physiol.},
     pages={66}
@@ -1496,7 +1497,7 @@ Arthropoden.},
 
 @article{lu1887aap2,
     author={Lukjanow, S. M.},
-    title={Beiträge zur Morphologie der Zelle. II. Ueber die Kerne der platten Muskelzellen bei Salamandra maculata.},
+    title={Beiträge zur Morphologie der Zelle. II. Ueber die Kerne der platten Muskelzellen bei Salamandra maculata.},
     year={1887},
     journal={Arch. Anatom. Physiol.},
     volume={30},
@@ -1527,7 +1528,7 @@ Arthropoden.},
 
 @article{ma1875cbm,
     author={Mayzel, W.},
-    title={Ueber eigenthümliche Vorgänge bei der Theilung der Kerne in Epithelzellen.},
+    title={Ueber eigenthümliche Vorgänge bei der Theilung der Kerne in Epithelzellen.},
     year={1875},
     journal={Centralblatt für die medic. Wiss., Berlin},
     number={50}
@@ -1535,7 +1536,7 @@ Arthropoden.},
 
 @article{ma1877cbm,
     author={Mayzel, W.},
-    title={Beiträge zur Lehre von dem Theilungsvorgange des Zellkerns.},
+    title={Beiträge zur Lehre von dem Theilungsvorgange des Zellkerns.},
     year={1877},
     journal={Centralblatt für die medic. Wiss., Berlin},
     note={Nro. 11 und Nro. 44.}
@@ -1543,7 +1544,7 @@ Arthropoden.},
 
 @article{ma1879za,
     author={Mayzel, W.},
-    title={Ueber die Vorgänge bei der Segmentation des Eies von Würmern (Nematoden) und Schnecken.},
+    title={Ueber die Vorgänge bei der Segmentation des Eies von Würmern (Nematoden) und Schnecken.},
     year={1879},
     journal={Zool. Anz.},
     volume={2},
@@ -1551,7 +1552,7 @@ Arthropoden.},
     url={http://www.biodiversitylibrary.org/page/9736391}
     }
 
-@inbook{ma1884,
+@incollection{ma1884,
     author={Mayzel, W.},
     title={O Karyjomitozie.},
     booktitle={Festschrift zu Ehren Hoyer's},
@@ -1661,7 +1662,7 @@ Centralnervensystem und der Retina bei Natterembryonen.},
 
 @article{ni1886ama,
     author={Nissen, F.},
-    title={Ueber das Verhalten der Kerne in den Milchdrüsenzellen bei der Absonderung.},
+    title={Ueber das Verhalten der Kerne in den Milchdrüsenzellen bei der Absonderung.},
     year={1886},
     journal={Arch. mikr. Anat.},
     volume={26},
@@ -1692,7 +1693,7 @@ Centralnervensystem und der Retina bei Natterembryonen.},
 
 @article{nu1884ama,
     author={Nussbaum, M.},
-    title={Ueber die Veränderungen der Geschlechtsproducte bis zur Eifurchung; ein Beitrag zur Lehre von der Vererbung.},
+    title={Ueber die Veränderungen der Geschlechtsproducte bis zur Eifurchung; ein Beitrag zur Lehre von der Vererbung.},
     year={1884},
     journal={Arch. mikr. Anat.},
     volume={23},
@@ -1710,7 +1711,7 @@ Centralnervensystem und der Retina bei Natterembryonen.},
 
 @article{oe1872ama,
     author={Oellacher, J.},
-    title={Beiträge zur Geschichte des Keimbläschens im Wirbelthiereie.},
+    title={Beiträge zur Geschichte des Keimbläschens im Wirbelthiereie.},
     year={1872},
     journal={Arch. mikr. Anat.},
     volume={8},
@@ -1720,7 +1721,7 @@ Centralnervensystem und der Retina bei Natterembryonen.},
 
 @article{og1883aap,
     author={Ogata, Masanori},
-    title={Die Veränderungen der Pankreaszellen bei der Sekretion.},
+    title={Die Veränderungen der Pankreaszellen bei der Sekretion.},
     year={1883},
     journal={Arch. Anat. Physiol.},
     }
@@ -1747,7 +1748,7 @@ Centralnervensystem und der Retina bei Natterembryonen.},
 
 @article{pf1883ama,
     author={Pfitzner, W.},
-    title={Beiträge zur Lehre vom Baue des Zellkerns und seinen Theilungserscheinungen.},
+    title={Beiträge zur Lehre vom Baue des Zellkerns und seinen Theilungserscheinungen.},
     year={1883},
     journal={Arch. mikr. Anat.},
     volume={22},
@@ -1866,7 +1867,7 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     }
 
 @book{pu1825,
-    author={Purkyně, J.E.},
+    author={Purkyn\v{e}, J.E.},
     title={Symbolae ad ovi avium historiam ante incubationem},
     year={1825},
     url={http://openlibrary.org/works/OL4705898W}
@@ -2164,6 +2165,182 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     pages={246},
     url={http://www.biodiversitylibrary.org/page/13805086}
     }
+
+@article{st1870spw,
+    author={Stricker, S.},
+    title={Ueber Zelltheilung in entzündeten Geweben.},
+    year={1870},
+    journal={Studien a.d. Inst. f. exp. Pathol. Wien}
+    }
+
+@article{st1877sbw,
+    author={Stricker, S.},
+    title={Beobachtungen über die Entstehung des Zellkerns.},
+    year={1877},
+    journal={Sitzber. akad. Ges. Wien, III. Abth.}
+    }
+
+@article{ta1887ama,
+    author={Tangl, F.},
+    title={Ueber das Verhältniss zwischen Zellkörper und Kern während der mitotischen Theilung.},
+    year={1887},
+    journal={Arch. mikr. Anat.},
+    volume={30},
+    pages={529},
+    url={http://www.biodiversitylibrary.org/page/13798415}
+    }
+
+@incollection{th1836,
+    editor={Todd, R.B.},
+    author={Thomson, A.},
+    title={Ovum},
+    volume={3},
+    series={The Cyclopaedia of Anatomy and Physiology},
+    year={1836-59},
+    url={http://openlibrary.org/works/OL16456646W}
+    }
+
+@article{us1882ama,
+    author={Uskov, N.},
+    title={Zur Bedeutung der Karyokinese.},
+    year={1882},
+    journal={Arch. mikr. Anat.},
+    volume={21},
+    pages={291},
+    url={http://www.biodiversitylibrary.org/page/14008730}
+    }
+
+@article{vi1855apa,
+    author={Virchov, R.},
+    title={Cellularpathologie},
+    year={1855},
+    journal={Arch. path. Anat.},
+    volume={8},
+    pages={3-39},
+    note={p. 23.},
+    doi={10.1007/BF01935312}
+    }
+
+@book{wa1836,
+    author={Wagner, R.},
+    title={Prodromus historiae generationis hominis atque animalium},
+    year={1836},
+    address={Lipsiae},
+    publisher={Voss},
+    url={http://openlibrary.org/works/OL16502807W}
+    }
+
+@article{wk1850bsm,
+    author={Warneck},
+    title={Ueber die Bildung und Entwicklung des Embryos bei Gasteropoden.},
+    year={1850},
+    journal={Bull. Soc. imp. Natur. de Moscou},
+    volume={23}
+    }
+
+@article{wg1887jm,
+    author={Weigert, K.},
+    title={Neuere Vererbungstheorien.},
+    year={1887},
+    journal={Schmidt's Jahrb. ges. Med.},
+    volume={215},
+    pages={89}
+    }
+
+@article{wi1888bgf,
+    author={Weismann, A. \& Ishikawa, C.},
+    title={Ueber die Bildung der Richtungskörperchen bei thierischen Eiern.},
+    year={1888},
+    journal={Ber. naturf. Ges. Freiburg},
+    volume={3},
+    number={1},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/11242564}
+    }
+
+@article{wm1886za,
+    author={Weismann, A.},
+    title={Richtungskörper bei parthenogenetischen Eiern.},
+    year={1886},
+    journal={Zool. Anz.},
+    volume={9},
+    pages={570},
+    url={http://www.biodiversitylibrary.org/page/30122300}
+    }
+
+@article{wi1889bgf,
+    author={Weismann, A. \& Ishikawa, C.},
+    title={Ueber partielle Befruchtung.},
+    year={1889},
+    journal={Ber. naturf. Ges. Freiburg},
+    volume={4},
+    number={1},
+    pages={51},
+    url={http://www.biodiversitylibrary.org/page/11502303}
+    }
+
+@article{wn1887bbg,
+    author={Went},
+    title={Beobachtungen über Kern- und Zelltheilung.},
+    year={1887},
+    journal={Ber. dt. botan. Ges.},
+    pages={254}
+    }
+
+@article{wm1878jms,
+    author={Whitman},
+    title={The embryology of Clepsine.},
+    year={1878},
+    journal={Quart. J. microsc. Science}
+    }
+
+@article{ws1886sbw,
+    author={Wiesner},
+    title={Untersuchungen über die Organisation der vegetabilischen Zellhaut.},
+    year={1886},
+    journal={Sitzber. Akad. Wiss. Wien},
+    volume={93},
+    pages={29}
+    }
+
+@article{z1885bz,
+    author={Zacharias, E.},
+    title={Ueber den Nucleolus.},
+    year={1885},
+    journal={Botan. Ztg.},
+    volume={43},
+    number={17},
+    pages={257},
+    note={Ibid. pp. 273, 289.},
+    url={http://www.biodiversitylibrary.org/page/33612109}
+    }
+
+@article{z1881bz,
+    author={Zacharias, E.},
+    title={Ueber die chemische Beschaffenheit des Zellkerns.},
+    year={1881},
+    journal={Botan. Ztg.},
+    volume={39},
+    number={11},
+    pages={169},
+    note={Ibid. p. 827. Vol. 40, p. 611.},
+    url={http://www.biodiversitylibrary.org/page/33806389}
+    }
+
+@article{zo1887ama,
+    author={Zacharias, O.},
+    title={Neue Untersuchungen über die Copulation der Geschlechtsproducte und den Befruchtungsvorgang bei Ascaris megalocephala.},
+    year={1887},
+    journal={Arch. mikr. Anat.},
+    volume={30},
+    pages={111},
+    url={http://www.biodiversitylibrary.org/page/13797997}
+    }
+
+
+
+    
+
 
 
 
