--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -643,6 +643,17 @@
 	volume={14}
 }
 
+@article{etal1884ama,
+	author={Drews R., Bockendahl A. et al.},
+	title={Studien über Regeneration der Gewebe.},
+	year={1884},
+	journal={Archiv für mikrokopische Anatomie},
+	volume={24},
+	number={1},
+	pages={338-397},
+	doi={10.1007/BF02960386}
+}
+
 @article{fw1881ama,
 	author={Flemming, W.},
 	title={Beiträge zur Kenntniss der Zelle und ihrer Lebenserscheinungen. III. Theil.},
@@ -683,17 +694,6 @@
 	number={1},
 	pages={50-91},
 	doi={10.1007/BF02960374}
-}
-
-@article{etal1884ama,
-	author={Drews R., Bockendahl A. et al.},
-	title={Studien über Regeneration der Gewebe.},
-	year={1884},
-	journal={Archiv für mikrokopische Anatomie},
-	volume={24},
-	number={1},
-	pages={338-397},
-	doi={10.1007/BF02960386}
 }
 
 @article{fw1884bc,
@@ -1063,6 +1063,16 @@ Bauchhöhle},
     year={1872},
     address={Breslau},
     note={(Diss.)}
+    }
+
+@book{hn1866,
+    author={Henle, J.},
+    title={II. Eingeweidelehre},
+    year={1866},
+    series={Handbuch der systematischen Anatomie des Menschen},
+    publisher={Vieweg},
+    address={Braunschweig},
+    url={http://openlibrary.org/works/OL5229723W}
     }
 
 @article{he1876zae,
