fix doc type, all multiauthored papers

--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -277,7 +277,8 @@
 }
 
 @article{vbej1884bel,
-	author={van Beneden, Édouard und Julin},
+	author={van Beneden, Édouard},
+	author={Julin},
 	title={La Spermatogénèse chez l'Askaride mégalocéphale.},
 	year={1884},
 	journal={Bull. Acad. royale de Belgique Ser. III},
@@ -296,7 +297,8 @@
 }
 
 @article{vben1887bel,
-	author={van Beneden, Édouard und Neyt, A.},
+	author={van Beneden, Édouard},
+	author={Neyt, A.},
 	title={Nouvelles recherches sur la fécondation et la division mitosique chez l'Ascaride mégalocéphale.},
 	year={1887},
 	journal={Bull. Acad. royale de Belgique Ser. III},
@@ -345,7 +347,8 @@
 }
 
 @article{bv1887va,
-	author={Bizzozero, G. und Vassale, G.},
+	author={Bizzozero, G.},
+	author={Vassale, G.},
 	title={Ueber die Erzeugung und die physiologische Regeneration der Drüsenzellen bei den Säugethieren.},
 	year={1887},
 	journal={Virchows Archiv für pathologische Anatomie},
@@ -443,9 +446,9 @@
 	url={http://www.biodiversitylibrary.org/page/30142278}
 }
 
-@article{brass1883,
+@book{brass1883,
 	author={Brass, Arnold},
-	title={Biologische Studien / die Organisation der thierischen Zelle.}
+	title={Biologische Studien / die Organisation der thierischen Zelle.},
 	year={1883},
 	publisher={Strien},
 	address={Halle},
@@ -1175,7 +1178,8 @@ Bauchhöhle},
     }
 
 @book{hwr1887,
-    author={Hertwig, O. und R.},
+    author={Hertwig, O.},
+    author={Hertwig, R.},
     title={Ueber den Befruchtungs- und Theilungs-Vorgang des thierischen Eies},
     year={1887},
     publisher={G. Fischer},
@@ -1387,7 +1391,8 @@ Arthropoden.},
     }
 
 @book{kb1878,
-    author={Kupffer, C. und Benecke, B.},
+    author={Kupffer, C.},
+    author={Benecke, B.},
     title={Der Vorgang der Befruchtung am Ei der Neunaugen},
     year={1878},
     publisher={Hartung},
@@ -1932,7 +1937,8 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     }
 
 @article{rr1881lg,
-    author={Reinke, J. \& Rodewald, H.},
+    author={Reinke, J.},
+    author={Rodewald, H.},
     title={Studien über das Protoplasma. I. Das Protoplasma von Aethalium septicum.},
     year={1881},
     journal={Untersuchungen aus dem botanischen Laboratorium der Univ. Göttingen},
@@ -2258,7 +2264,8 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     }
 
 @article{wi1888bgf,
-    author={Weismann, A. \& Ishikawa, C.},
+    author={Weismann, A.},
+    author={Ishikawa, C.},
     title={Ueber die Bildung der Richtungskörperchen bei thierischen Eiern.},
     year={1888},
     journal={Ber. naturf. Ges. Freiburg},
@@ -2279,7 +2286,8 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     }
 
 @article{wi1889bgf,
-    author={Weismann, A. \& Ishikawa, C.},
+    author={Weismann, A.},
+    author={Ishikawa, C.},
     title={Ueber partielle Befruchtung.},
     year={1889},
     journal={Ber. naturf. Ges. Freiburg},
