--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -293,6 +293,7 @@
 	year={1883},
 	publisher={Gand},
 	address={Leipzig, Paris},
+    note={v.a. Archives de Biologie, 1884.},
 	url={http://openlibrary.org/works/OL10191W}
 }
 
