--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -2356,9 +2356,54 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     url={http://www.biodiversitylibrary.org/page/13797997}
     }
 
+@article{sp1886ama,
+	author={Stilling, H.},
+	author={Pfitzner, W.},
+	title={Ueber die Regeneration der glatten Muskeln.},
+	year={1886},
+	journal={Ach. mikr. Anat.},
+	volume={28},
+	pages={396},
+	url={http://www.biodiversitylibrary.org/page/13800972}
+	}
 
+@article{ca1886aa,
+	author={Canalis, P.},
+	title={Sullo sviluppo dei denti nei mammiferi.},
+	year={1886},
+	journal={Anat. Anz.},
+	volume={1},
+	pages={187},
+	url={http://www.biodiversitylibrary.org/page/11780769}
+	}
 
-    
+@article{ca1886mph,
+	author={Canalis, P.},
+	title={Contribution à la pathologie expérimentale du tissu hépatique.},
+	year={1886},
+	journal={Internationale Monatsschrift für Anatomie und Histologie},
+	volume={3},
+	pages={205},
+	url={http://www.biodiversitylibrary.org/page/35654128}
+	}
+
+@article{un1883md,
+	author={Unna, P.G.},
+	title={Neuere Arbeiten über Kern- und Zellteilung.},
+	year={1883},
+	journal={Monatsh. f. prakt. Dermat.},
+	volume={3},
+	number={1},
+	pages={17},
+	url={http://archive.org/details/monatsheftefrpr22unkngoog}
+	}
+
+@phdthesis{ei1884,
+	author={Einhorn, Max},
+	title={Ueber das Verhalten der Lymphocyten zu den weissen Blutkörperchen},
+	year={1884},
+	address={Berlin}
+	}
 
 
 
