--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -590,7 +590,7 @@
 	url={http://www.biodiversitylibrary.org/page/13472372}
 }
 
-@article{
+@article{cv1841cr,
 	author={Coste, Victor},
 	title={Recherches microscopiques sur le contenu de la vésicule du germe envisagé dans toutes les classes de la série animale.},
 	year={1841},
@@ -1273,7 +1273,7 @@ Bauchhöhle},
     url={http://openlibrary.org/works/OL12464141W}
     }
 
-@book{kb1878,
+@book{klb1878,
     author={Kleinenberg, N.},
     title={Sullo sviluppo del "lumbricus trapezoides"},
     year={1878},
