--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -639,7 +639,7 @@
 	url={http://www.biodiversitylibrary.org/page/14489785}
 }
 
-@article{
+@article{eb1884fm,
 	author={Eberth, C. J.},
 	title={Die Befruchtung des thierischen Eies nach Untersuchungen am Echinidenei.},
 	year={1884},
@@ -1696,15 +1696,12 @@ Centralnervensystem und der Retina bei Natterembryonen.},
     url={http://www.biodiversitylibrary.org/page/13986229}
     }
 
-@article{nu1886ama,
+@article{nu1883sbo,
     author={Nussbaum, M.},
-    title={Ueber die Theilbarkeit der lebendigen Materie. I.Die spontane und künstliche Theilung der Infusorien.},
-    year={1886},
-    journal={Arch. mikr. Anat.},
-    volume={26},
-    pages={485},
-    note={(speciell S. 525 ff.)}
-    url={http://www.biodiversitylibrary.org/page/14003270}
+    title={Askaris und Leptodera.},
+    year={1883},
+    journal={Sitzb. d. Niederrh. Ges. f. Natur- u. Heilkunde Bonn},
+    month={5. August}
     }
 
 @article{nu1884ama,
@@ -1717,12 +1714,15 @@ Centralnervensystem und der Retina bei Natterembryonen.},
     url={http://www.biodiversitylibrary.org/page/13804995}
     }
 
-@article{nu1883sbo,
+@article{nu1886ama,
     author={Nussbaum, M.},
-    title={Askaris und Leptodera.},
-    year={1883},
-    journal={Sitzb. d. Niederrh. Ges. f. Natur- u. Heilkunde Bonn},
-    month={5. August}
+    title={Ueber die Theilbarkeit der lebendigen Materie. I.Die spontane und künstliche Theilung der Infusorien.},
+    year={1886},
+    journal={Arch. mikr. Anat.},
+    volume={26},
+    pages={485},
+    note={(speciell S. 525 ff.)}
+    url={http://www.biodiversitylibrary.org/page/14003270}
     }
 
 @article{oe1872ama,
